--- a/style.css
+++ b/style.css
@@ -10,7 +10,12 @@ body {
     height: 600px;
     width: 900px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: rgb(171, 171, 171);
+}
+
+#piezas button{
+    margin-top: 20px
 }
