--- a/style.css
+++ b/style.css
@@ -65,3 +65,26 @@ textarea {
     display: flex;
     flex-direction: row;
 }
+
+
+.overlay{
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 9999;
+    text-align: center;
+    justify-content:center;
+    align-items:center;
+  }
+  
+  
+.overlayBox{
+    top: 10;
+    left: 10;
+    padding: 40px;
+    background-color: rgba(255, 255, 255, 1);
+  }
